// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addRule: with hey 1`] = `
Array [
  "1",
  "2",
  "Fizz",
  "4",
  "Buzz",
  "Fizz",
]
`;

exports[`argument: empty 1`] = `
Array [
  "1",
  "2",
  "Fizz",
  "4",
  "Buzz",
]
`;

exports[`argument: froms 1`] = `
Array [
  "2",
  "3",
]
`;

exports[`argument: num 1`] = `
Array [
  "1",
  "2",
  "Fizz",
  "4",
  "Buzz",
]
`;

exports[`argument: overwrite number 1`] = `
Array [
  "1",
  "2",
]
`;

exports[`at: 3 fizz 1`] = `"Fizz"`;

exports[`at: 5 buzz 1`] = `"Buzz"`;

exports[`at: 7 1`] = `"7"`;

exports[`at: 15 fizzbuzz 1`] = `"FizzBuzz"`;

exports[`custom func: to 3 1`] = `
Array [
  "1",
  "KYOKO",
  "3",
  "KYOKO",
  "_toshino_",
  "KYOKO",
  "7",
  "KYOKO",
  "9",
  "KYOKO",
]
`;

exports[`it: works 1`] = `
Array [
  "1",
  "2",
  "Fizz",
  "4",
  "Buzz",
]
`;

exports[`take: to 3 1`] = `
Array [
  "1",
  "2",
  "Fizz",
]
`;

exports[`take: to 10 from 5 1`] = `
Array [
  "Buzz",
  "Fizz",
  "7",
  "8",
  "Fizz",
  "Buzz",
]
`;

exports[`take: to 30 1`] = `
Array [
  "1",
  "2",
  "Fizz",
  "4",
  "Buzz",
  "Fizz",
  "7",
  "8",
  "Fizz",
  "Buzz",
  "11",
  "Fizz",
  "13",
  "14",
  "FizzBuzz",
  "16",
  "17",
  "Fizz",
  "19",
  "Buzz",
  "Fizz",
  "22",
  "23",
  "Fizz",
  "Buzz",
  "26",
  "Fizz",
  "28",
  "29",
  "FizzBuzz",
]
`;
